--- a/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,195 +1,21 @@
-﻿@*@using Microsoft.AspNetCore.Mvc.Localization
-
-    @inject IViewLocalizer Localizer
-    @inject IHtmlLocalizer<WebApp.Classes.SharedResource> SharedLocalizer
-
-
-    <!DOCTYPE html>
-    <html lang="ru">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Стоматология Чернигов ..." />
-        <meta name="Keywords" content="стоматологический кабинет 'Весела усмішка', весела усмишка, весела усмішка, стоматология, стоматология Чернигов, лечение зубов, зубная боль, стоматолог, зубной врач">
-
-        <title>
-            @SharedLocalizer["NameClinic"] "Весела усмішка"
-        </title>
-        <link href="~/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300, 400, 700" rel="stylesheet">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-
-        <link rel="stylesheet" href="~/css/animate.css">
-        <link rel="stylesheet" href="~/css/owl.carousel.min.css">
-        <link rel="stylesheet" href="~/css/bootstrap-datepicker.css">
-        <link rel="stylesheet" href="~/css/jquery.timepicker.css">
-
-        <link rel="stylesheet" href="~/fonts/ionicons/css/ionicons.min.css">
-        <link rel="stylesheet" href="~/fonts/flaticon/font/flaticon.css">
-        <link rel="stylesheet" href="~/css/site.css" />
-    </head>
-    <body>
-
-        <header role="banner">
-            <div class="top-bar">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-md-9 col-sm-8 col-7 col-auto">
-                            <ul class="social list-unstyled">
-                                <li>
-                                    <a href="https://www.facebook.com/profile.php?id=100011895847296" target="_blank">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </div>
-
-                        <div>
-
-                        </div>
-                    </div>
-                </div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container">
-                        <a class="d-none d-md-block d-lg-none d-lg-block d-xl-none d-xl-block" href='@Url.Action("Index", "Home")'>
-                            <h4 class="text-dark align-middle" style="font-size: 1.3rem;">
-                                <b>
-                                    @SharedLocalizer["NameClinic"]
-                                    <br />
-                                    <span class="text-uppercase ">"Весела усмішка"</span>
-                                </b>
-                            </h4>
-                        </a>
-
-                        <a class="d-block d-sm-none d-none d-sm-block d-md-none" href='@Url.Action("Index", "Home")'>
-                            <h4 class="text-dark align-middle" style="font-size: 1.3rem;">
-                                <b>
-                                    <small>
-                                        @SharedLocalizer["NameClinic"]
-                                        <br />
-                                        <span class="text-uppercase ">"Весела усмішка"</span>
-                                    </small>
-                                </b>
-                            </h4>
-                        </a>
-
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarsExample05">
-                            <ul class="navbar-nav ml-auto" style="font-size: 18px;">
-
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" id="Index">
-                                        @SharedLocalizer["Index"]
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About" id="About">
-                                        @SharedLocalizer["About"]
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ServicesAndPrices" id="ServicesAndPrices">
-                                        @SharedLocalizer["ServicesAndPrices"]
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Appointment" id="Appointment">
-                                        @SharedLocalizer["ReceptionAtReception"]
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact" id="Contact">
-                                        @SharedLocalizer["Contacts"]
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-
-        </header>
-
-
-
-        <div class="container">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>
-
-        <footer class="site-footer" role="contentinfo">
-            <div class="container">
-                <div class="row pt-md-3">
-                    <div class="col-md-12">
-                        <hr class="border-t">
-                    </div>
-                    <div class="col-md-6 col-sm-12 copyright">
-                        <p>
-                            @SharedLocalizer["NameClinic"]
-                            "Весела усмішка" &copy; &nbsp; 2018
-                        </p>
-                    </div>
-                    <div class="col-md-6 col-sm-12 text-md-right text-sm-left">
-                        <a class="p-2" href="https://www.facebook.com/profile.php?id=100011895847296" target="_blank">
-                            <span class="fa fa-facebook"></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </footer>
-
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-        <script src="~/scripts/owl.carousel.min.js"></script>
-        <script src="~/scripts/bootstrap-datepicker.js"></script>
-        <script src="~/scripts/jquery.timepicker.min.js"></script>
-        <script src="~/scripts/jquery.waypoints.min.js"></script>
-        <script src="~/scripts/main.js"></script>
-
-        <script src="~/js/site.js" asp-append-version="true"></script>
-
-        <script>
-            $("#@(ViewContext.RouteData.Values["Action"])").addClass("active");
-
-        </script>
-
-        @RenderSection("Scripts", required: false)
-    </body>
-    </html>*@
-
-
-@***************************************************************************@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>Admin Panel</title>
+    <link href="~/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Custom fonts for this template-->
-    <link href="sb-admin-2/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="~/sb-admin-2/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="~/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -203,8 +29,8 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/Admin/Home/Index">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                <div class="sidebar-brand-icon">
+                    <i class="fas fa-tooth"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">
                     @*Весела усмішка*@
@@ -226,16 +52,33 @@
             <!-- Divider -->
             @*<hr class="sidebar-divider">*@
 
-
             <li class="nav-item">
-                <a class="nav-link"
-                   href="/Home/Index">
-                    <i class="fas fa-fw fa-cog"></i>
+                <a asp-area=""
+                   asp-controller="Home"
+                   asp-action="Index"
+                   class="nav-link">
+                    <i class="fas fa-file"></i>
                     <span>Перейти на главную</span>
                 </a>
             </li>
 
-            <!-- Heading -->
+            <div class="sidebar-heading">
+                Информация
+            </div>
+
+            <li class="nav-item">
+                <a asp-area="Admin"
+                   asp-controller="Home"
+                   asp-action="CustomerMessages"
+                   class="nav-link">
+                    <i class="fas fa-envelope"></i>
+                    <span>Сообщения клиентов</span>
+                </a>
+            </li>
+
+
+
+
             <div class="sidebar-heading">
                 Настройка
             </div>
@@ -414,13 +257,13 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="sb-admin-2/jquery-easing/jquery.easing.min.js"></script>
+    <script src="~/sb-admin-2/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    <script src="~/js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="sb-admin-2/chart.js/Chart.min.js"></script>
+    <script src="~/sb-admin-2/chart.js/Chart.min.js"></script>
 
     <!-- Page level custom scripts -->
     @*<script src="js/demo/chart-area-demo.js"></script>
