--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -68,13 +68,18 @@
                                 </p>
                         </div>*@
 
-                    <div class="col-md-3 col-sm-4 col-5 col-auto">
-                        @await Html.PartialAsync("_SelectLanguagePartial")
-                    </div>
+                <div class="col-md-2 col-sm-4 col-5 col-auto">
+                    @await Html.PartialAsync("_SelectLanguagePartial")
+                </div>
 
-                    <div>
-
-                    </div>
+                <div class="d-none d-sm-block">
+                    <a asp-area="Admin"
+                       asp-controller="Home"
+                       asp-action="Index"
+                       style="padding: 5px; font-size: 13px;">
+                        Админка
+                    </a>
+                </div>
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
