--- a/WebApp/Views/Home/Contact.cshtml
+++ b/WebApp/Views/Home/Contact.cshtml
@@ -2,7 +2,7 @@
 @inject IViewLocalizer Localizer
 @inject IHtmlLocalizer<WebApp.Classes.SharedResource> SharedLocalizer
 
-@model WebApp.Models.ClientMessage
+@model WebApp.Models.CustomerMessages
 
 @{
     ViewBag.Title = @SharedLocalizer["Contacts"];
@@ -18,50 +18,72 @@
                     <div class="row">
                         <div class="col-md-12 form-group" style="text-align:center; text-transform:uppercase;">
                             <h5>
-                                @*@Resources.Resource.ContactUs*@
                                 @SharedLocalizer["ContactUs"]
                             </h5>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-md-6 form-group">
-                            <label for="fname">
-                                @*@Resources.Resource.Name*@
-                                @SharedLocalizer["Name"]
+                            <label for="Surname">
+                                Фамилия
                             </label>
-                            @*<input type="text" class="form-control form-control-lg" id="fname">*@
+                            @Html.TextBoxFor(m => m.Surname, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Surname)
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label for="Name">
+                                @SharedLocalizer["Name"]
+                                <span class="text-danger">*</span>
+                            </label>
                             @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Name)
                         </div>
+                    </div>
+
+                    <div class="row">
                         <div class="col-md-6 form-group">
-                            <label for="lname">
-                                @*@Resources.Resource.Phone*@
-                                @SharedLocalizer["Phone"]
+                            <label for="Patronymic">
+                                Отчество
                             </label>
-                            @*<input type="text" class="form-control form-control-lg" id="lname">*@
+                            @Html.TextBoxFor(m => m.Patronymic, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Patronymic)
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label for="Phone">
+                                @SharedLocalizer["Phone"]
+                                <span class="text-danger">*</span>
+                            </label>
                             @Html.TextBoxFor(m => m.Phone, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Phone)
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-md-12 form-group">
-                            <label for="email">Email</label>
-                            @*<input type="email" id="email" class="form-control form-control-lg">*@
+                            <label for="Email">Email</label>
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Email)
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 form-group">
-                            <label for="message">
-                                @*@Resources.Resource.YourMessage*@
+                            <label for="Message">
                                 @SharedLocalizer["YourMessage"]
+                                <span class="text-danger">*</span>
                             </label>
-                            @*<textarea name="message" id="message" class="form-control form-control-lg" cols="30" rows="4"></textarea>*@
                             @Html.TextAreaFor(m => m.Message, new { @class = "form-control", @style = "max-width: 540px; height: 155px;" })
                             @Html.ValidationMessageFor(m => m.Message)
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-md-12 form-group">
+                            <span class="text-danger">*</span>
+                            - поля обязательные для заполнения
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-md-6 form-group">
                             <input type="submit" value=@SharedLocalizer["Send"] class="btn btn-primary btn-lg btn-block">
